# YAGE

./: .gitignore  CMakeLists.txt
examples/fitbos/: FitbosGame.cpp  FitbosGame.h  main.cpp
models/: RinFigure.mtl
models/Kirby/: Kirby.blend  Kirby.blend1  Kirby.mtl
shaders/: Basic.frag.glsl  Basic.vert.glsl  Default.frag.glsl
src/: BufferBase.cpp  BufferBase.h  BufferClearMask.h  BufferType.h  BufferUsage.h  Camera.cpp  Camera.h  Color.cpp  Color.h  DrawMode.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  GameWindowCreationDesc.h  GameWindowFullScreenMode.h  GraphicsDevice.cpp  GraphicsDevice.h  IndexBuffer.cpp  IndexBuffer.h  IndexType.h  Input.cpp  Input.h  KeyCode.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshVertexAttribute.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderType.h  Texture.cpp  Texture.h  TextureFilter.h  TextureUsage.h  (+13 more)
